--- a/ui/html/general_settings.html
+++ b/ui/html/general_settings.html
@@ -49,10 +49,23 @@
       }
     }
   </style>
+  <style>
+    @media (max-width: 768px) {
+      .sidebar {
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+      }
+      .sidebar.open {
+        transform: translateX(0);
+      }
+    }
+  </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark text-gray-800 dark:text-gray-200 min-h-screen">
+  <div id="sidebar-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden md:hidden"></div>
+  
 <div class="flex h-screen">
-<aside class="w-64 bg-white dark:bg-gray-900 flex flex-col border-r border-gray-200 dark:border-gray-800">
+<aside id="sidebar" class="sidebar fixed md:static w-64 bg-white dark:bg-gray-900 flex flex-col border-r border-gray-200 dark:border-gray-800 z-50 h-full">
 <div class="h-20 flex items-center px-6 border-b border-gray-200 dark:border-gray-800">
 <h1 class="text-xl font-bold text-gray-900 dark:text-white">ytdlp2STRM</h1>
 </div>
@@ -88,16 +101,22 @@ fe80grau
 </a>
 </div>
 </aside>
-<main class="flex-1 flex flex-col overflow-hidden">
-<header class="h-20 flex items-center justify-between px-8 border-b border-gray-200 dark:border-gray-800 bg-white dark:bg-gray-900">
-<h2 class="text-2xl font-bold text-gray-900 dark:text-white">General Settings</h2>
-<div class="flex items-center gap-4">
-<a href="https://www.buymeacoffee.com/fe80grau" target="_blank" class="text-sm px-4 py-2 rounded-md bg-yellow-400 hover:bg-yellow-500 text-gray-900 font-medium transition-colors">
-☕ Buy me a coffee
-</a>
+<main class="flex-1 flex flex-col w-full md:w-auto overflow-hidden">
+<header class="h-16 md:h-20 flex items-center justify-between px-4 md:px-8 border-b border-gray-200 dark:border-gray-800 bg-white dark:bg-gray-900">
+        <div class="flex items-center gap-3">
+          <button id="menu-toggle" class="md:hidden p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+            <span class="material-symbols-outlined text-gray-700 dark:text-gray-300">menu</span>
+          </button>
+          <h2 class="text-lg md:text-2xl font-bold text-gray-900 dark:text-white">General Settings</h2>
+        </div>
+        <div class="flex items-center gap-2 md:gap-4">
+<a href="https://www.buymeacoffee.com/fe80grau" target="_blank" class="text-xs md:text-sm px-2 md:px-4 py-1.5 md:py-2 rounded-md bg-yellow-400 hover:bg-yellow-500 text-gray-900 font-medium transition-colors">
+<span class="hidden sm:inline">☕ Buy me a coffee</span>
+            <span class="sm:hidden">☕</span>
+          </a>
 </div>
 </header>
-<div class="flex-1 p-8 overflow-y-auto custom-scrollbar">
+<div class="flex-1 p-4 md:p-8 overflow-y-auto custom-scrollbar">
 {% if request == "POST" %}
   {% if result %}
     <div class="mb-6 p-4 rounded-lg bg-green-100 dark:bg-green-900/30 border border-green-200 dark:border-green-800 text-green-800 dark:text-green-300">
@@ -116,25 +135,25 @@ fe80grau
   {% endif %}
 {% endif %}
 <div class="bg-white dark:bg-gray-900 rounded-lg border border-gray-200 dark:border-gray-800 shadow-sm">
-<div class="p-6 border-b border-gray-200 dark:border-gray-800">
-<h3 class="text-lg font-semibold text-gray-900 dark:text-white">Configuration File</h3>
-<p class="text-sm text-gray-500 dark:text-gray-400 mt-1">./config/config.json</p>
+<div class="p-4 md:p-6 border-b border-gray-200 dark:border-gray-800">
+<h3 class="text-base md:text-lg font-semibold text-gray-900 dark:text-white">Configuration File</h3>
+<p class="text-xs md:text-sm text-gray-500 dark:text-gray-400 mt-1">./config/config.json</p>
 </div>
-<form method="post" class="p-6">
-<div class="space-y-6">
+<form method="post" class="p-4 md:p-6">
+<div class="space-y-4 md:space-y-6">
 {% for key, value in config_data.items() %}
 <div>
-<label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">{{ key }}</label>
-<input type="text" name="{{ key }}" value="{{ value }}" class="w-full px-4 py-2 rounded-md border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-gray-900 dark:text-gray-100 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-colors">
+<label class="block text-xs md:text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">{{ key }}</label>
+<input type="text" name="{{ key }}" value="{{ value }}" class="w-full px-3 md:px-4 py-2 text-sm md:text-base rounded-md border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-gray-900 dark:text-gray-100 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-colors">
 </div>
 {% endfor %}
 </div>
-<div class="flex items-center gap-3 mt-8 pt-6 border-t border-gray-200 dark:border-gray-800">
-<button type="submit" class="flex items-center gap-2 px-6 py-2.5 rounded-md bg-blue-600 hover:bg-blue-700 text-white font-medium transition-colors">
+<div class="flex flex-col sm:flex-row items-stretch gap-3 mt-6 md:mt-8 pt-4 md:pt-6 border-t border-gray-200 dark:border-gray-800">
+<button type="submit" class="flex items-center justify-center gap-2 px-4 md:px-6 py-2 md:py-2.5 text-sm md:text-base rounded-md bg-blue-600 hover:bg-blue-700 text-white font-medium transition-colors">
 <span class="material-symbols-outlined text-base">save</span>
 Save Changes
 </button>
-<a href="/" class="flex items-center gap-2 px-6 py-2.5 rounded-md bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700 text-gray-700 dark:text-gray-300 font-medium transition-colors">
+<a href="/" class="flex items-center justify-center gap-2 px-4 md:px-6 py-2 md:py-2.5 text-sm md:text-base rounded-md bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700 text-gray-700 dark:text-gray-300 font-medium transition-colors">
 <span class="material-symbols-outlined text-base">arrow_back</span>
 Go Back
 </a>
@@ -144,5 +163,6 @@ Go Back
 </div>
 </main>
 </div>
+  <script src="/mobile-menu.js"></script>
 </body>
 </html>
