--- a/ui/html/log.html
+++ b/ui/html/log.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html class="dark" lang="en">
+
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>ytdlp2STRM - Logs</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
-<script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
-<script>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <title>ytdlp2STRM - Logs</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
+  <script>
     tailwind.config = {
       darkMode: "class",
       theme: {
@@ -27,7 +28,7 @@
       },
     };
   </script>
-<style type="text/tailwindcss">
+  <style type="text/tailwindcss">
     @layer base {
       body {
         @apply font-display;
@@ -49,80 +50,115 @@
       }
     }
   </style>
+  <style>
+    @media (max-width: 768px) {
+      .sidebar {
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+      }
+      .sidebar.open {
+        transform: translateX(0);
+      }
+    }
+  </style>
 </head>
+
 <body class="bg-background-light dark:bg-background-dark text-gray-800 dark:text-gray-200 min-h-screen">
-<div class="flex h-screen">
-<aside class="w-64 bg-white dark:bg-gray-900 flex flex-col border-r border-gray-200 dark:border-gray-800">
-<div class="h-20 flex items-center px-6 border-b border-gray-200 dark:border-gray-800">
-<h1 class="text-xl font-bold text-gray-900 dark:text-white">ytdlp2STRM</h1>
-</div>
-<nav class="flex-1 px-4 py-6 space-y-2">
-<a class="flex items-center gap-3 px-4 py-2 rounded text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors" href="/">
-<span class="material-symbols-outlined">dashboard</span>
-<span>Dashboard</span>
-</a>
-<a class="flex items-center gap-3 px-4 py-2 rounded text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors" href="/general">
-<span class="material-symbols-outlined">settings</span>
-<span>General Settings</span>
-</a>
-<a class="flex items-center gap-3 px-4 py-2 rounded text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors" href="/plugins">
-<span class="material-symbols-outlined">extension</span>
-<span>Plugins</span>
-</a>
-<a class="flex items-center gap-3 px-4 py-2 rounded text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors" href="/crons">
-<span class="material-symbols-outlined">schedule</span>
-<span>CRONS</span>
-</a>
-<a class="flex items-center gap-3 px-4 py-2 rounded bg-blue-100 dark:bg-blue-900/50 text-primary dark:text-blue-300 font-semibold" href="/log">
-<span class="material-symbols-outlined">description</span>
-<span>Logs</span>
-</a>
-</nav>
-<div class="p-4 border-t border-gray-200 dark:border-gray-800">
-<p class="text-sm text-gray-500 dark:text-gray-400">Version 1.0.0</p>
-<a href="https://github.com/fe80Grau/ytdlp2STRM" target="_blank" class="text-xs text-gray-500 dark:text-gray-400 hover:text-primary dark:hover:text-blue-300 transition-colors">
-<span class="inline-flex items-center gap-1">
-<svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
-fe80grau
-</span>
-</a>
-</div>
-</aside>
-<main class="flex-1 flex flex-col overflow-hidden">
-<header class="h-20 flex items-center justify-between px-8 border-b border-gray-200 dark:border-gray-800 bg-white dark:bg-gray-900">
-<h2 class="text-2xl font-bold text-gray-900 dark:text-white">Application Logs</h2>
-<div class="flex items-center gap-4">
-<a href="https://www.buymeacoffee.com/fe80grau" target="_blank" class="text-sm px-4 py-2 rounded-md bg-yellow-400 hover:bg-yellow-500 text-gray-900 font-medium transition-colors">
-☕ Buy me a coffee
-</a>
-</div>
-</header>
-<div class="flex-1 p-8 overflow-y-auto custom-scrollbar">
-<div class="bg-white dark:bg-gray-900 rounded-lg border border-gray-200 dark:border-gray-800 shadow-sm">
-<div class="p-6 border-b border-gray-200 dark:border-gray-800">
-<h3 class="text-lg font-semibold text-gray-900 dark:text-white">Log File</h3>
-<p class="text-sm text-gray-500 dark:text-gray-400 mt-1">./ytdlp2strm.log (Last 7 days)</p>
-</div>
-<div class="p-6">
-<div id="plugin-fields" class="bg-black rounded-lg p-4 min-h-[600px] max-h-[70vh] overflow-y-auto custom-scrollbar">
-<pre class="text-sm text-gray-300 font-mono whitespace-pre-wrap">{% for line in log_content %}<div class="log-line h-5">{{ line|safe }}</div>{% endfor %}</pre>
-</div>
-<div class="flex items-center gap-3 mt-6 pt-6 border-t border-gray-200 dark:border-gray-800">
-<a href="/" class="flex items-center gap-2 px-6 py-2.5 rounded-md bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700 text-gray-700 dark:text-gray-300 font-medium transition-colors">
-<span class="material-symbols-outlined text-base">arrow_back</span>
-Go Back
-</a>
-</div>
-</div>
-</div>
-</div>
-</main>
-</div>
-<script>
-document.addEventListener('DOMContentLoaded', (event) => {
-    const pluginFields = document.getElementById('plugin-fields');
-    pluginFields.scrollTop = pluginFields.scrollHeight;
-});
-</script>
+  <div id="sidebar-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden md:hidden"></div>
+  <div class="flex h-screen">
+    <aside id="sidebar" class="sidebar fixed md:static w-64 bg-white dark:bg-gray-900 flex flex-col border-r border-gray-200 dark:border-gray-800 z-50 h-full">
+      <div class="h-20 flex items-center px-6 border-b border-gray-200 dark:border-gray-800">
+        <h1 class="text-xl font-bold text-gray-900 dark:text-white">ytdlp2STRM</h1>
+      </div>
+      <nav class="flex-1 px-4 py-6 space-y-2">
+        <a class="flex items-center gap-3 px-4 py-2 rounded text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors"
+          href="/">
+          <span class="material-symbols-outlined">dashboard</span>
+          <span>Dashboard</span>
+        </a>
+        <a class="flex items-center gap-3 px-4 py-2 rounded text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors"
+          href="/general">
+          <span class="material-symbols-outlined">settings</span>
+          <span>General Settings</span>
+        </a>
+        <a class="flex items-center gap-3 px-4 py-2 rounded text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors"
+          href="/plugins">
+          <span class="material-symbols-outlined">extension</span>
+          <span>Plugins</span>
+        </a>
+        <a class="flex items-center gap-3 px-4 py-2 rounded text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors"
+          href="/crons">
+          <span class="material-symbols-outlined">schedule</span>
+          <span>CRONS</span>
+        </a>
+        <a class="flex items-center gap-3 px-4 py-2 rounded bg-blue-100 dark:bg-blue-900/50 text-primary dark:text-blue-300 font-semibold"
+          href="/log">
+          <span class="material-symbols-outlined">description</span>
+          <span>Logs</span>
+        </a>
+      </nav>
+      <div class="p-4 border-t border-gray-200 dark:border-gray-800">
+        <p class="text-sm text-gray-500 dark:text-gray-400">Version 1.0.0</p>
+        <a href="https://github.com/fe80Grau/ytdlp2STRM" target="_blank"
+          class="text-xs text-gray-500 dark:text-gray-400 hover:text-primary dark:hover:text-blue-300 transition-colors">
+          <span class="inline-flex items-center gap-1">
+            <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+              <path
+                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+            </svg>
+            fe80grau
+          </span>
+        </a>
+      </div>
+    </aside>
+    <main class="flex-1 flex flex-col overflow-hidden w-full md:w-auto">
+      <header
+        class="h-16 md:h-20 flex items-center justify-between px-4 md:px-8 border-b border-gray-200 dark:border-gray-800 bg-white dark:bg-gray-900">
+        <div class="flex items-center gap-3">
+          <button id="menu-toggle" class="md:hidden p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+            <span class="material-symbols-outlined text-gray-700 dark:text-gray-300">menu</span>
+          </button>
+          <h2 class="text-lg md:text-2xl font-bold text-gray-900 dark:text-white">Logs</h2>
+        </div>
+        <div class="flex items-center gap-2 md:gap-4">
+          <a href="https://www.buymeacoffee.com/fe80grau" target="_blank"
+            class="text-xs md:text-sm px-2 md:px-4 py-1.5 md:py-2 rounded-md bg-yellow-400 hover:bg-yellow-500 text-gray-900 font-medium transition-colors">
+            <span class="hidden sm:inline">☕ Buy me a coffee</span>
+            <span class="sm:hidden">☕</span>
+          </a>
+        </div>
+      </header>
+      <div class="flex-1 p-4 md:p-8 overflow-y-auto custom-scrollbar">
+        <div class="bg-white dark:bg-gray-900 rounded-lg border border-gray-200 dark:border-gray-800 shadow-sm">
+          <div class="p-4 md:p-6 border-b border-gray-200 dark:border-gray-800">
+            <h3 class="text-base md:text-lg font-semibold text-gray-900 dark:text-white">Log File</h3>
+            <p class="text-xs md:text-sm text-gray-500 dark:text-gray-400 mt-1">./ytdlp2strm.log (Last 7 days)</p>
+          </div>
+          <div class="p-4 md:p-6">
+            <div id="plugin-fields"
+              class="bg-black rounded-lg p-2 md:p-4 min-h-[400px] md:min-h-[600px] max-h-[60vh] md:max-h-[70vh] overflow-y-auto custom-scrollbar">
+              <pre
+                class="text-xs md:text-sm text-gray-300 font-mono whitespace-pre-wrap">{% for line in log_content %}<div class="log-line">{{ line|safe }}</div>{% endfor %}</pre>
+            </div>
+            <div class="flex items-center gap-3 mt-4 md:mt-6 pt-4 md:pt-6 border-t border-gray-200 dark:border-gray-800">
+              <a href="/"
+                class="flex items-center gap-2 px-4 md:px-6 py-2 md:py-2.5 rounded-md bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700 text-gray-700 dark:text-gray-300 font-medium transition-colors text-sm md:text-base">
+                <span class="material-symbols-outlined text-base">arrow_back</span>
+                <span class="hidden sm:inline">Go Back</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
+  <script src="/mobile-menu.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+      const pluginFields = document.getElementById('plugin-fields');
+      pluginFields.scrollTop = pluginFields.scrollHeight;
+    });
+  </script>
 </body>
+
 </html>
